# eo-basic-example

./: .gitignore  LICENSE  README.md  download_config.json  download_config_raster.json  main.py  pyproject.toml  thing.ipynb  urban_development.ipynb
download/: __init__.py  downloader.py
download/configure/: config.py  file.py
download/configure/validate/: exceptions.py  utils.py  validators.py
download/process/: handlers.py  util.py
download/setup/: constants.py  logger.py
